<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_wd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_cerulean"
    android:baselineAligned="false"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_activity_ic_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/ic_counter_content_description"
        app:srcCompat="@drawable/ic_counter" />

    <TextView
        android:id="@+id/main_activity_tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/number_placeholder"
        android:textAlignment="center"
        android:textColor="@color/dark_sienna"
        android:textSize="72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_activity_et_starting_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/starting_number_placeholder"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/dark_sienna"
            android:textColorHint="@color/dark_sienna"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_activity_bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/english_violet"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/main_activity_bt_randomStartingNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/english_violet"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/button_interval"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_activity_bt_increment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/english_violet"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/button_increment"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/main_activity_et_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/Interval"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/dark_sienna"
            android:textColorHint="@color/dark_sienna"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_activity_bt_decrement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/english_violet"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/button_decrement"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/main_activity_tv_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/operation"
        android:textColor="@color/dark_sienna"
        android:textSize="20sp" />
</LinearLayout>